<resources>
    <string name="app_name">My Tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="save">save</string>
    <string name="mikhmon_url">mikhmon url</string>
    <string name="pihole_url">pihole url</string>
    <string name="mikhmon">mikhmon</string>
    <string name="pihole">pihole</string>
    <string name="enter_your_mikhmon_amp_pihole_url"><![CDATA[Enter your mikhmon & pihole url]]></string>
</resources>
